--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/runtime": "^7.24.7",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@solana/web3.js": "^1.93.1",
+    "borsh": "^2.0.0",
+    "ethers": "^6.13.1",
     "file-type": "^19.0.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
