--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@solana/web3.js": "^1.93.1",
+    "@stripe/stripe-js": "^4.0.0",
     "borsh": "^2.0.0",
     "ethers": "^6.13.1",
     "file-type": "^19.0.0",
@@ -35,6 +36,7 @@
     "react-icons": "^5.2.1",
     "server": "^1.0.39",
     "sharp": "^0.33.4",
+    "stripe": "^16.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
