--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "latest",
     "openai": "^4.52.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^22.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
