--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.396.0",
     "mini-css-extract-plugin": "^2.9.0",
     "next": "latest",
+    "next-auth": "^4.24.7",
     "openai": "^4.52.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^22.12.0",
