--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
     "server": "^1.0.39",
     "sharp": "^0.33.4",
