--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@solana/web3.js": "^1.93.1",
     "@stripe/stripe-js": "^4.0.0",
+    "@vercel/node": "^3.2.0",
     "borsh": "^2.0.0",
     "ethers": "^6.13.1",
     "file-type": "^19.0.0",
@@ -43,6 +44,7 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/formidable": "^3.4.5",
     "@types/micro": "^10.0.0",
     "@types/node": "^20",
