--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "memory": 1024
     },
     "api/addTimestampProgram.ts": {
-      "runtime": "vercel/node"
+      "runtime": "vercel/node@2.0.0"
     }
   },
   "rewrites": [
@@ -20,7 +20,7 @@
   ],
   "crons": [
     {
-      "path": "/api/addTimestampProgram",
+      "path": "/api/cron/addTimestampProgram",
       "schedule": "*/5 * * * *"
     }
   ]
