--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/runtime": "^7.24.7",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^5.16.5",
+    "@mui/system": "^5.16.5",
     "@solana/web3.js": "^1.93.1",
     "@stripe/stripe-js": "^4.0.0",
     "@vercel/node": "^3.2.0",
     "borsh": "^2.0.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
     "file-type": "^19.0.0",
     "firebase": "^10.12.2",
@@ -38,6 +43,7 @@
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
+    "react-responsive": "^10.0.0",
     "server": "^1.0.39",
     "sharp": "^0.33.4",
     "stripe": "^16.0.0",
