--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/system": "^5.16.5",
     "@solana/web3.js": "^1.93.1",
@@ -33,17 +34,18 @@
     "heic2any": "^0.0.4",
     "lucide-react": "^0.396.0",
     "mini-css-extract-plugin": "^2.9.0",
-    "next": "latest",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "openai": "^4.52.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^22.12.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
+    "recharts": "^2.12.7",
     "server": "^1.0.39",
     "sharp": "^0.33.4",
     "stripe": "^16.0.0",
