--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/system": "^5.16.5",
-    "@solana/web3.js": "^1.93.1",
+    "@project-serum/borsh": "^0.2.5",
+    "@solana/web3.js": "^1.95.2",
     "@stripe/stripe-js": "^4.0.0",
     "@vercel/node": "^3.2.0",
+    "axios": "^1.7.2",
     "borsh": "^2.0.0",
+    "bs58": "^4.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
     "file-type": "^19.0.0",
